crates/vexor-compiler/tests/golden/error/output/list_range2.err
Error: parse error
   ╭─[ input:2:15 ]
   │
 2 │ val zs = [1..2,3]
   │               ┬  
   │               ╰── invalid list
   │               │  
   │               ╰── expected `]`, comma-separated list, range `[x..y]`, range `[x,y..z]`
───╯
